<resources>
    <string name="app_name" translatable="false">LibreTube</string>
    <string name="startpage">Home</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="library">Library</string>
    <string name="yes">Yes</string>
    <string name="search_hint">Search</string>
    <string name="videos">Videos</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="loggedIn">Logged in.</string>
    <string name="loggedout">Logged out.</string>
    <string name="registered">Registered. Now you can subscribe to channels.</string>
    <string name="already_logged_in">Already logged in. You may log out of your account.</string>
    <string name="instances">Choose…</string>
    <string name="customInstance">Custom</string>
    <string name="region">Region</string>
    <string name="login_register">Log in/register</string>
    <string name="importsuccess">Subscribed</string>
    <string name="downloadfailed">Download failed.</string>
    <string name="import_from_yt">Import subscriptions</string>
    <string name="import_from_yt_summary">From YouTube or NewPipe</string>
    <string name="app_theme">Theme</string>
    <string name="server_error">There seem to be a problem with the selected server. Try another instance.</string>
    <string name="unknown_error">Network error.</string>
    <string name="error">Something went wrong.</string>
    <string name="empty">You have to enter a username and password.</string>
    <string name="notgmail">This is for a Piped account</string>
    <string name="defres">Video resolution</string>
    <string name="grid">Grid columns (portrait)</string>
    <string name="grid_landscape">Grid columns (landscape)</string>
    <string name="emptyList">Nothing here.</string>
    <string name="deletePlaylist">Delete playlist</string>
    <string name="areYouSure">Delete the playlist?</string>
    <string name="createPlaylist">Create playlist</string>
    <string name="createNewPlaylist">Create new playlist</string>
    <string name="playlistCreated">Playlist created.</string>
    <string name="playlistName">Playlist name</string>
    <string name="emptyPlaylistName">The playlist name can\'t be empty</string>
    <string name="addToPlaylist">Add to playlist</string>
    <string name="success">Done.</string>
    <string name="fail">Failed :(</string>
    <string name="about">About</string>
    <string name="changeLanguage">Language</string>
    <string name="systemLanguage">System</string>
    <string name="systemDefault">System</string>
    <string name="lightTheme">Light</string>
    <string name="darkTheme">Dark</string>
    <string name="subscribers">%1$s subscribers</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="instance">Instance</string>
    <string name="customization">Adjustments</string>
    <string name="website">Website</string>
    <string name="donate">Donate</string>
    <string name="uploaderAndVideoCount">%1$s • %2$d videos</string>
    <string name="subscriberAndVideoCounts">%1$s subscribers • %2$d videos</string>
    <string name="videoCount">%1$d videos</string>
    <string name="noInternet">Connect to the Internet first.</string>
    <string name="retry">Retry</string>
    <string name="comments">Comments</string>
    <string name="comments_count">Comments (%1$s)</string>
    <string name="replies">Replies</string>
    <string name="channels">Channels</string>
    <string name="albums">Albums</string>
    <string name="all">All</string>
    <string name="playlists">Playlists</string>
    <string name="okay">OK</string>
    <string name="finished">Finished</string>
    <string name="history">History</string>
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear history</string>
    <string name="music_songs">YT Music Songs</string>
    <string name="music_videos">YT Music Videos</string>
    <string name="music_albums">YT Music Albums</string>
    <string name="music_playlists">YT Music Playlists</string>
    <string name="music_artists">YT Music Artists</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="sponsorblock_summary">Uses the https://sponsor.ajay.app API</string>
    <string name="segment_skipped">Skipped segment</string>
    <string name="category_segments">Segments</string>
    <string name="category_sponsor">Sponsor</string>
    <string name="category_sponsor_summary">Paid promotion, paid referrals and direct advertisements. Not for self-promotion or free genuine shoutouts to causes, creators, websites, and products</string>
    <string name="category_selfpromo">Unpaid/Self Promotion</string>
    <string name="category_selfpromo_summary">Similar to \"sponsor\" except for unpaid or self promotion. This includes sections about merchandise, donations, or info about who they collaborated with</string>
    <string name="category_interaction">Interaction reminder</string>
    <string name="category_interaction_summary">When there is a short reminder to like, subscribe or follow in the middle of content. If long or about something specific, it should instead be self promotion</string>
    <string name="category_intro">Intermission/Intro Animation</string>
    <string name="category_intro_summary">An interval without actual content. Could be a pause, static frame, repeating animation. Should not be used for transitions containing info</string>
    <string name="category_outro">End cards and credits</string>
    <string name="category_outro_summary">Info following the ending. Not for conclusions with info</string>
    <string name="category_filler">Filler Tangent/Jokes</string>
    <string name="category_filler_summary">For tangential scenes added only for filler or humor not required to understand the main content of the video</string>
    <string name="category_music_offtopic">Music: Non-Music Section</string>
    <string name="category_music_offtopic_summary">Only for use in music videos. It should cover parts of the video not part of official mixes. In the end, the video should resemble the Spotify or any other mixed version as closely as possible, or reduce talking or other distractions</string>
    <string name="category_preview">Preview/Recap</string>
    <string name="category_preview_summary">For segments detailing future content without additional info. If it includes clips that only appear here, this is very likely the wrong category</string>
    <string name="category_highlight">Show video highlight</string>
    <string name="category_highlight_summary">Could either be the advertised title, the thumbnail or the most interesting part of the video. You can skip to it by tapping on it in the chapters section</string>
    <string name="category_exclusive_access">Exclusive Access</string>
    <string name="category_hook">Hook/Greetings</string>
    <string name="appearance">Appearance</string>
    <string name="downloads">Downloads</string>
    <string name="update_summary">Check for update</string>
    <string name="update_check_frequency">Update check frequency</string>
    <string name="advanced">Advanced</string>
    <string name="player">Player</string>
    <string name="appearance_summary">Adjust the app to your liking</string>
    <string name="version">Version %1$s</string>
    <string name="show_updates">Check updates automatically</string>
    <string name="buffering_goal">Preloading</string>
    <string name="buffering_goal_summary">Max. amount of seconds of video to buffer</string>
    <string name="player_summary">Defaults and behavior</string>
    <string name="pauseOnScreenOff">Auto-pause</string>
    <string name="pauseOnScreenOff_summary">Pause playback when the screen is turned off</string>
    <string name="reset">Restore defaults</string>
    <string name="restore">Restore</string>
    <string name="navLabelVisibility">Label visibility</string>
    <string name="data_saver_mode">Data-saver mode</string>
    <string name="data_saver_mode_summary">Skip thumbnails and other images</string>
    <string name="history_summary">Watch and search history</string>
    <string name="system_caption_style">System caption style</string>
    <string name="rich_caption_rendering">Rich caption rendering</string>
    <string name="rich_caption_rendering_summary">Render web captions for a more rich and customized experience</string>
    <string name="captions">Captions</string>
    <string name="general">General</string>
    <string name="general_summary">Downloads and data-saver</string>
    <string name="caption_settings">Captions</string>
    <string name="default_subtitle_language">Subtitle language</string>
    <string name="misc">Misc</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="maximum_image_cache">Max image cache size</string>
    <string name="new_videos_badge">Indicator for new videos</string>
    <string name="new_videos_badge_summary">Show a badge with the amount of new videos if there are some</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="queue">Queue</string>
    <string name="navbar_order">Order</string>
    <string name="queue_insert_related_videos">Insert related videos</string>
    <string name="autoplay_playlists">Autoplay playlists</string>
    <string name="autoplay_playlists_summary">Automatically play next video in playlists regardless of selected autoplay setting</string>
    <string name="captions_size">Captions size</string>
    <string name="backup_restore_summary">Import and export subscriptions, playlists, …</string>
    <string name="alternative_pip_controls">Alternative PiP controls</string>
    <string name="alternative_pip_controls_summary">Show audio only and skip controls in PiP instead of forward and rewind</string>
    <string name="auto_fullscreen_shorts">Auto fullscreen on short videos</string>
    <string name="play_automatically">Play automatically</string>
    <string name="play_automatically_summary">Start playing video automatically when selecting</string>
    <string name="welcome">Welcome to LibreTube</string>
    <string name="playback_during_call">Continue playback during phone call</string>
    <string name="playback_during_call_summary">Note that this also affects the app to not handle any kind of audio focus anymore</string>
    <string name="home_tab_content">Home tab content</string>
    <string name="select_backup_location">Select Backup Location</string>
    <string name="set_as_default_app">Set as Default App</string>
    <string name="link_handling_title">Link Handling</string>
    <string name="link_handling_desc">Set LibreTube as the default app for YouTube links.</string>
    <string name="auto_backup_title">Auto Backup</string>
    <string name="auto_backup_desc">Choose a folder to automatically save daily backups.</string>
    <string name="external_download_provider">External download provider</string>
    <string name="external_download_provider_summary">Enter the package name of the app you want to use for downloading videos. Leave blank to use LibreTube\'s inbuilt downloader.</string>
    <string name="full_local_mode_desc">Directly fetch everything from YouTube, without using Piped.</string>
    <string name="view_logs">View Logs</string>
</resources>