<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_settings"
        android:summary="@string/general_summary"
        app:fragment="com.github.libretube.ui.preferences.GeneralSettings"
        app:key="general"
        app:title="@string/general" />



    <Preference
        android:icon="@drawable/ic_color"
        app:fragment="com.github.libretube.ui.preferences.AppearanceSettings"
        app:key="appearance"
        app:summary="@string/appearance_summary"
        app:title="@string/appearance" />

    <Preference
        android:icon="@drawable/ic_block"
        app:fragment="com.github.libretube.ui.preferences.SponsorBlockSettings"
        app:key="sponsorblock"
        app:summary="@string/sponsorblock_summary"
        app:title="@string/sponsorblock" />

    <Preference
        android:icon="@drawable/ic_play_filled"
        app:fragment="com.github.libretube.ui.preferences.PlayerSettings"
        app:key="player"
        app:summary="@string/player_summary"
        app:title="@string/player" />

    <Preference
        android:icon="@drawable/ic_history_filled"
        app:fragment="com.github.libretube.ui.preferences.HistorySettings"
        android:summary="@string/history_summary"
        app:key="history"
        app:title="@string/history" />



    <Preference
        android:icon="@drawable/ic_backup"
        app:fragment="com.github.libretube.ui.preferences.BackupRestoreSettings"
        app:key="backup_restore"
        app:summary="@string/backup_restore_summary"
        app:title="@string/backup_restore" />

    <PreferenceCategory>

        <Preference
            android:icon="@drawable/ic_update"
            app:key="update"
            app:summary="@string/version"
            app:title="@string/update_summary" />

        <Preference
            android:icon="@drawable/ic_info"
            app:key="view_logs"
            app:title="@string/view_logs" />

    </PreferenceCategory>

</PreferenceScreen>
