<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">





    <PreferenceCategory app:title="@string/captions">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_caption"
            app:defaultValue="true"
            app:key="system_caption_style"
            app:title="@string/system_caption_style" />

        <Preference
            android:dependency="system_caption_style"
            android:icon="@drawable/ic_settings"
            app:key="caption_settings"
            app:title="@string/caption_settings" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_caption"
            android:summary="@string/rich_caption_rendering_summary"
            app:defaultValue="false"
            app:key="rich_caption_rendering"
            app:title="@string/rich_caption_rendering" />

        <com.github.libretube.ui.views.SliderPreference
            android:icon="@drawable/ic_text"
            android:key="captions_size"
            android:title="@string/captions_size"
            app:defValue="18"
            app:stepSize="1"
            app:valueFrom="8"
            app:valueTo="30" />

        <ListPreference
            android:defaultValue=""
            android:icon="@drawable/ic_caption"
            app:key="default_subtitle"
            app:title="@string/default_subtitle_language" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/queue"
        app:isPreferenceVisible="false">

        <SwitchPreferenceCompat
             app:isPreferenceVisible="false"
            android:defaultValue="true"
            android:icon="@drawable/ic_list"
            android:title="@string/queue_insert_related_videos"
            app:key="queue_insert_related_videos" />

        <SwitchPreferenceCompat
            app:isPreferenceVisible="false"
            android:defaultValue="true"
            android:summary="@string/autoplay_playlists_summary"
            android:title="@string/autoplay_playlists"
            app:key="autoplay_playlists" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc">

        <com.github.libretube.ui.preferences.EditNumberPreference
            android:icon="@drawable/ic_time"
            app:defaultValue="50"
            app:key="buffering_goal"
            app:summary="@string/buffering_goal_summary"
            app:title="@string/buffering_goal" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_call"
            android:summary="@string/playback_during_call_summary"
            app:defaultValue="false"
            app:key="playback_during_call"
            app:title="@string/playback_during_call" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_headphones"
            android:summary="@string/alternative_pip_controls_summary"
            app:key="alternative_pip_controls"
            app:title="@string/alternative_pip_controls" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_fullscreen"
            android:title="@string/auto_fullscreen_shorts"
            app:key="auto_fullscreen_shorts" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_pause_filled"
            android:summary="@string/pauseOnScreenOff_summary"
            app:defaultValue="false"
            app:key="pause_screen_off"
            app:title="@string/pauseOnScreenOff" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_play_circle"
            android:summary="@string/play_automatically_summary"
            app:key="play_automatically"
            app:title="@string/play_automatically" />

    </PreferenceCategory>

</PreferenceScreen>