<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/location">

        <ListPreference
            android:icon="@drawable/ic_translate"
            app:defaultValue="sys"
            app:key="language"
            app:title="@string/changeLanguage"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



    <PreferenceCategory app:title="@string/downloads">



        <EditTextPreference
            android:icon="@drawable/ic_open"
            android:key="external_download_provider"
            android:summary="@string/external_download_provider_summary"
            android:title="@string/external_download_provider" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/advanced">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_download_filled"
            app:key="automatic_update_checks"
            app:title="@string/show_updates" />

        <ListPreference
            android:defaultValue="360"
            android:dependency="automatic_update_checks"
            android:entries="@array/checkingFrequency"
            android:entryValues="@array/checkingFrequencyValues"
            android:icon="@drawable/ic_history"
            app:key="checking_frequency"
            app:title="@string/update_check_frequency"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="disabled"
            android:entries="@array/dataSaverModeOptions"
            android:entryValues="@array/dataSaverModeValues"
            android:icon="@drawable/ic_data_saver"
            android:summary="@string/data_saver_mode_summary"
            app:key="data_saver_mode_key"
            app:title="@string/data_saver_mode" />

        <ListPreference
            android:entries="@array/cacheSize"
            android:entryValues="@array/cacheSizeValues"
            android:icon="@drawable/ic_cache"
            app:defaultValue="128"
            app:key="image_cache_size"
            app:title="@string/maximum_image_cache"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_badge"
            android:summary="@string/new_videos_badge_summary"
            app:key="new_videos_badge"
            app:title="@string/new_videos_badge" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc">

        <Preference
            android:icon="@drawable/ic_open"
            app:key="set_default_app"
            app:title="@string/set_as_default_app"
            app:summary="@string/link_handling_desc" />

        <Preference
            android:icon="@drawable/ic_reset"
            app:key="reset_settings"
            app:title="@string/reset" />

    </PreferenceCategory>

</PreferenceScreen>