<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <!-- Items removed as per user request -->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/navigation_bar">

        <Preference
            android:icon="@drawable/ic_home"
            app:key="navbar_items"
            app:title="@string/navbar_order" />

        <ListPreference
            android:icon="@drawable/ic_label"
            app:defaultValue="selected"
            app:entries="@array/labelVisibility"
            app:entryValues="@array/labelVisibilityValues"
            app:key="label_visibility"
            app:title="@string/navLabelVisibility"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>

        <MultiSelectListPreference
            android:entries="@array/homeTabItems"
            android:entryValues="@array/homeTabItemsValues"
            android:icon="@drawable/ic_awesome"
            android:key="home_tab_content"
            android:title="@string/home_tab_content"
            app:defaultValue="@array/homeTabItemsValues" />

    </PreferenceCategory>

</PreferenceScreen>